<resources>
    <string name="app_name">LetsEat</string>
    <string name="which_eat">뭐 먹지?</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="empty_data">현재 검색된 데이터가 없습니다.</string>
    <string name="require_gps_permission">해당 앱을 사용하기 위해선 GPS 권한이 필요합니다.</string>
    <string name="plz_enable_gps">GPS 권한이 허용되지 않았습니다. 앱을 종료합니다.</string>
    <string name="ok">확인</string>
    <string name="close">닫기</string>
    <string name="map_load_error">맵 로딩중 오류가 발생했습니다. 앱을 재 시동해주세요.</string>
    <string name="kakao_map_not_loaded">카카오맵이 로드되지 않았습니다. 다시 시도해주세요.</string>
    <string name="can_not_display_current_location">현재 위치를 표시할 수 없습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="gps_not_enabled">네트워크가 꺼져있습니다. 네트워크가 켜져있어야 서비스를 사용할 수 있습니다.</string>
    <string name="gps_load_failed">GPS 위치를 가져올 수 없습니다. 다시 시도해주세요.</string>
    <string name="gps_internal_error">GPS 위치를 가져오던 중 오류가 발생했습니다. GPS 권한이 허용되어 있으신가요?</string>

    <string name="setting">설정</string>
    <string name="delete_user_setting">사용자 데이터 삭제</string>
    <string name="delete_user_setting_detail">사용자의 검색 이력 및 기록을 삭제합니다.</string>
    <string name="ai_history">AI 메뉴 추천 이력</string>
    <string name="ai_history_detail">AI의 메뉴 추천 이력을 확인합니다.</string>
    <string name="lets_eat_something">밥 묵으러 가자</string>
    <string name="setup_category">카테고리 설정</string>
    <string name="add_category">카테고리 직접 추가</string>
    <string name="eat_something">밥 묵기</string>
    <string name="add">추가</string>
    <string name="which_type_want">어떤 느낌의 음식을 원하세요?</string>
    <string name="validation_error">검증 과정에서 문제가 발생했습니다.</string>
    <string name="validation_empty">입력란이 비어있습니다.</string>
    <string name="validation_too_long">카테고리가 너무 깁니다. 짧게 작성해주세요.</string>
    <string name="validation_category_duplicate">이미 추가된 카테고리입니다. 다른 카테고리를 추가해주세요.</string>

    <string name="ai_thinking_hard">AI가 열심히 생각중..</string>
    <string name="ai_load_fail">AI가 메뉴를 찾지 못햇어요..</string>
    <string name="repeat_again_later">다시 시도해주세요 ㅠㅠ</string>

    <string name="ai_find_menu">AI가 메뉴를 찾아냈어요!</string>
    <string name="choose_one_of_them">다음 메뉴중 하나를 선택해주세요!</string>
    <string name="list_menu">음식 목록</string>
    <string name="search_restaurant">가게 검색하기</string>

    <string name="selection_empty">선택한 항목이 없습니다. 항목을 선택해주세요.</string>
    <string name="selection_too_many">선택한 항목이 너무 많습니다. 카테고리를 줄여주세요.</string>
    <string name="select_only_one">한개만 선택해주세요.</string>

    <string name="result_dialog_menu_not_found">메뉴 정보가 없습니다. 다시 시도해주세요.</string>
    <string name="request_error">요청 도중 문제가 발생했습니다. 다시 시도해주세요.</string>
    <string name="request_exception">요청이 처리되지 못했습니다. 네트워크 상태를 확인해주세요.</string>

    <string name="kakao_map_stores_api_error">가게 검색 요청중 오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="distance_meter">%1$dm</string>
    <string name="distance_kilometer">%1$skm</string>

    <string name="delete_user_info">유저 정보 삭제</string>
    <string name="delete_user_info_detail">유저 정보를 삭제합니다. 삭제 후에는 앱이 종료됩니다.</string>

    <string name="history">검색 이력</string>
    <string name="date_format"># %1$s</string>
    <string name="time_format">%1$s KST</string>
    <string name="recommend_result">추천결과 %1$d건</string>

    <string name="user_id">유저 아이디</string>
    <string name="search_category">검색 카테고리</string>
    <string name="response_code">응답 코드</string>
    <string name="response_result">추천 결과</string>
    <string name="history_dialog_argument_invalid">정보를 불러오는데 실패했습니다. 다시 시도해주세요.</string>
    <string name="user_info_deleted">유저 정보가 삭제되었습니다.</string>
    <string name="user_delete_failed">유저 정보 삭제에 실패했습니다. 잠시 후 다시 시도해주세요.</string>
</resources>